# dockerhub-api

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  a2a.json  connector_manifest.yml  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  debug.Dockerfile  mcp.compose.yml
dockerhub_api/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  dockerhub_input_models.py  dockerhub_response_models.py  kg_ingest.py  main_agent.json  mcp_server.py
dockerhub_api/api/: __init__.py  api_client_access_tokens.py  api_client_audit_logs.py  api_client_auth.py  api_client_base.py  api_client_groups.py  api_client_org_access_tokens.py  api_client_orgs.py  api_client_registry.py  api_client_registry_base.py  api_client_repositories.py  api_client_scim.py  api_client_scout.py
dockerhub_api/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
dockerhub_api/mcp/: __init__.py  mcp_admin.py  mcp_audit.py  mcp_auth.py  mcp_kg.py  mcp_org.py  mcp_registry.py  mcp_repos.py  mcp_scim.py  mcp_scout.py  mcp_teams.py
dockerhub_api/ontology/: __init__.py  certification.json  dockerhub.ttl
dockerhub_api/ontology/fixtures/: records.json
dockerhub_api/ontology/mappings/: source.yaml
dockerhub_api/ontology/migrations/: manifest.json
dockerhub_api/ontology/shapes/: connector.shacl.ttl
dockerhub_api/prompts/: main_agent.json  registry_specialist.json
dockerhub_api/skills/dockerhub-api-operations/: SKILL.md
dockerhub_api/skills/dockerhub-api-operations/agents/: openai.yaml
dockerhub_api/skills/dockerhub-api-operations/references/: catalog.md
dockerhub_api/skills/dockerhub-image-registry-scout/: SKILL.md  WORKFLOW.md
dockerhub_api/skills/dockerhub-org-administration/: SKILL.md  WORKFLOW.md
dockerhub_api/skills/dockerhub-repository-management/: SKILL.md  WORKFLOW.md
dockerhub_api/skills/dockerhub-starter/: SKILL.md
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  overview.md  platform.md  usage.md
installation/: index.html
overview/: index.html
platform/: index.html
scripts/: validate_a2a_agent.py  validate_agent.py  verify_api_integration.py
search/: search_index.json
tests/: conftest.py  test_a2a_validation.py  test_api_audit.py  test_api_org.py  test_api_registry.py  test_api_repositories.py  test_api_scim.py  test_api_scout.py  test_api_teams.py  test_api_tokens.py  test_api_wrapper.py  test_auth.py  test_concept_parity.py  test_dockerhub_a2a_validation.py  test_dockerhub_mcp_validation.py  test_identity_namespace_scoping.py  test_init_dynamics.py  test_kg_ingest.py  test_mcp_validation.py  test_models.py  test_rate_limit.py  test_startup.py
usage/: index.html
