[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "dockerhub-api"
version = "0.5.0"
description = "Docker Hub API + MCP Server + A2A Server"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities>=0.50.0", "httpx>=0.27.0", "python-dotenv>=1.0.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.50.0",]
agent = [ "agent-utilities[agent,logfire]>=0.50.0",]
all = [ "dockerhub-api[mcp,agent,logfire]>=0.4.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
dockerhub-mcp = "dockerhub_api.mcp_server:mcp_server"
dockerhub-agent = "dockerhub_api.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
dockerhub-api = "dockerhub_api.skills"

[project.entry-points."agent_utilities.prompt_providers"]
dockerhub-api = "dockerhub_api.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
dockerhub_api = [ "mcp_config.json", "main_agent.json", "agent_data/**", "prompts/**", "skills/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "dockerhub_api*",]

[tool.vulture]
ignore_names = ["request", "config", "cls", "exc_info"]
