[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "dockerhub-api"
version = "1.0.1"
description = "Docker Hub API + MCP Server + A2A Server"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.12, <3.15"
dependencies = [ "agent-utilities>=1.27.1,<2.0.0", "httpx>=0.28.1", "python-dotenv>=1.2.2",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@users.noreply.github.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
agent = [ "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",]
all = [ "dockerhub-api[mcp,agent,logfire]>=1.0.0",]
test = [
    "pytest-xdist>=3.8.0", "pytest>=9.1.1", "pytest-asyncio>=1.4.0", "pytest-cov>=7.1.0",]

[project.scripts]
dockerhub-mcp = "dockerhub_api.mcp_server:mcp_server"
dockerhub-agent = "dockerhub_api.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
dockerhub-api = "dockerhub_api.skills"

[project.entry-points."agent_utilities.ontology_providers"]
dockerhub-api = "dockerhub_api.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
dockerhub-api = "dockerhub_api.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
dockerhub-api = "dockerhub_api.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
dockerhub_api = [ "mcp_config.json", "main_agent.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "dockerhub_api*",]

[tool.vulture]
ignore_names = ["request", "config", "cls", "exc_info"]
